--- a/angular.json
+++ b/angular.json
@@ -40,15 +40,17 @@
               "node_modules/primeflex/primeflex.min.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+            ]
           },
           "configurations": {
             "production": {
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "1.5mb",
+                  "maximumError": "2mb"
+
                 },
                 {
                   "type": "anyComponentStyle",
